--- a/style.css
+++ b/style.css
@@ -4,59 +4,110 @@
 --Brightorange: hsl(31, 77%, 52%);
 --Darkcyan: hsl(184, 100%, 22%);
 --Verydarkcyan: hsl(179, 100%, 13%);
---Transparentwhite :(paragraphs): hsla(0, 0%, 100%, 0.75);
---Verylightgray :(background, headings, buttons): hsl(0, 0%, 95%);
+--Transparentwhite :hsla(0, 0%, 100%, 0.75);
+--Verylightgray :hsl(0, 0%, 95%);
 }
 
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 body {
     font-size: 15px;
-    /* font-family: 'Big Shoulders Display', cursive; */
     font-family: 'Lexend Deca', sans-serif;
     background-color: var(--Verylightgray);
 }
 
 .main-container {
-    border: 1px solid black;
     width: 325px;
+    margin: 87px auto 40px;
+    border-radius: 8px;
+    overflow: hidden; 
 }
 
+article {
+    width: 100%;
+    height: 440px;
+    padding: 48px;
+}
 
+#sedans {
+    background-color: var(--Brightorange);
+}
 
+#suvs {
+    background-color: var(--Darkcyan);
+}
 
+#luxury {
+    background-color: var(--Verydarkcyan)
+}
 
+img {
+    margin-bottom: 36px;
+}
 
+h2 {
+    color: var(--Verylightgray);
+    font-family: 'Big Shoulders Display', cursive;
+    font-size: 2.4em;
+    text-transform: uppercase;
+    margin-bottom: 25px;
+}
 
+p {
+    color: var(--Transparentwhite);
+    line-height: 25px;
+    margin-bottom: 25px;
+}
 
+button {
+    width: 148px;
+    height: 46px;
+    border-radius: 45px;
+    border-style: none;
+    background-color: var(--Verylightgray);
+    font-family: 'Lexend Deca', sans-serif;
+    font-size: 15px;
+}
 
+#sedans-btn {
+    color: var(--Brightorange);
+}
 
+#suvs-btn {
+    color: var(--Darkcyan);
+}
 
+#luxury-btn {
+    color: var(--Verydarkcyan);
+}
 
+button:hover {
+    cursor: pointer;
+    border: 2px solid var(--Verylightgray);
+}
 
+#sedans-btn:hover {
+    background-color: var(--Brightorange);
+    color: var(--Verylightgray);
+}
 
+#suvs-btn:hover {
+    background-color: var(--Darkcyan);
+    color: var(--Verylightgray);
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+#luxury-btn:hover {
+    background-color: var(--Verydarkcyan);
+    color: var(--Verylightgray);
+}
 
 .footer { 
     font-size: 11px; 
     text-align: center; }
 .footer a { 
     color: hsl(228, 45%, 44%); }
+
