finalizado vista desktop

--- a/style.css
+++ b/style.css
@@ -111,3 +111,16 @@ button:hover {
 .footer a { 
     color: hsl(228, 45%, 44%); }
 
+@media (min-width : 944px) {
+    .main-container {
+        width: 924px;
+        display: flex;
+        margin-top: 170px;
+    }
+    article {
+        height: 500px;
+    }
+    p {
+        margin-bottom: 80px;
+    }
+}
